Ensures keyboard closes when tapping apps grid background

Bug: 902957
Change-Id: Ie0ddf3d189bcedd7a7e6f40a4b5db919b8554878
Reviewed-on: https://chromium-review.googlesource.com/c/1332427
Reviewed-by: Weidong Guo <weidongg@chromium.org>
Commit-Queue: Kevin Strohbehn <ginko@google.com>
Cr-Commit-Position: refs/heads/master@{#609872}
Former-commit-id: 7c8b76182c65c3f00383d839430769313e795dde